updated issues link

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "bugs": {
     "mail": "daniel@rednoise.org",
-    "url": "https://github.com/dhowe/RiTaJS/issues"
+    "url": "https://github.com/dhowe/RiTa/issues"
   },
   "licenses": [
     {
