--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
       "url": "http://www.opensource.org/licenses/GPL-3.0"
     }
   ],
-  "dependencies": {},
   "scripts": {
     "test": "gulp test.node.pkg"
+  },
+  "dependencies": {
+  },
+  "optionalDependencies": {
+    "yamljs": "^0.2.1"
   },
   "devDependencies": {
     "argsparser": "0.0.6",
@@ -49,8 +53,6 @@
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^2.2.20",
     "qunit": "^0.6.4",
-    "qunitjs": "^1.14.0",
-    "yargs": "^1.2.6"
-  },
-  "optionalDependencies": {}
+    "qunitjs": "^1.14.0"
+  }
 }
