--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   "scripts": {
     "test": "gulp test.node.pkg"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "optionalDependencies": {
     "yamljs": "^0.2.1"
   },
@@ -53,6 +52,7 @@
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^2.2.20",
     "qunit": "^0.6.4",
-    "qunitjs": "^1.14.0"
+    "qunitjs": "^1.14.0",
+    "yargs": "^3.4.5"
   }
 }
